--- a/Lab2_fitness/fitness_2.css
+++ b/Lab2_fitness/fitness_2.css
@@ -1,6 +1,3 @@
-*{margin: 0;
-    padding: 0;
-}
 
 
 .title p {
@@ -18,7 +15,6 @@
     background-color:#F5F5F5;
     border: 1px solid #A9A9A9;}
 
-
 body {
     background-color: #F5F5F5;
 }
@@ -28,26 +24,27 @@ body {
     padding: 0;
 }
 .menu ul {
-    background: linear-gradient(to top, black, grey);
+    background: linear-gradient(to top, black, grey);      
+    font-style: italic,serif;
     height: 20px;
-    padding: 10px 0 0 0;
-
+    padding: 5px 5px 5px 5px;
 }
 
 .menu li {
     list-style: none;
     display: inline-block;
-    border: outset 3px;
+    border:  2px;
 }
 
 .menu a {
     color: #FFFFFF ;
     text-decoration: none;
+    text-align:  center; 
 }
 
 .menu li a:hover {
     color: white;
-    background: linear-gradient(to top, white, black);
+    background: linear-gradient(to top, white, black,grey);
 }
 
 .side {
