--- a/Lab4_cadastree-se/css/cadastre-se_2.css
+++ b/Lab4_cadastree-se/css/cadastre-se_2.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 
 body {
     width: 1350px;
@@ -165,10 +161,7 @@ img {
     display: inline-block;
     padding-left: 100px;
     padding-bottom: 50px;
-
 }
-
-
 
 .ou > p:before,
 .ou > p:after {
@@ -195,7 +188,6 @@ img {
     left: 138px;
     width: 283px;
     height: 250px;
-
 }
 
 .first,
@@ -232,9 +224,9 @@ img {
 .registration {
     position: absolute;
     top: 455px;
-    left: 210px;
+    left: 200px;
 }
-.registration button {
+.registration  {
     width: 149px;
     height: 33px;
     font: 14px 'Helvetica Neue Regular';
@@ -259,16 +251,26 @@ img {
 legend {
     margin-bottom: 10px;
     text-align: center;
-    padding: 30px;
-    padding-top: 60px;
+    padding: 10px;
+    padding-top: 50px;
+    padding-left: 420px;
+}
 
+input {
+margin-left: auto;
+
+}
+fieldset {
+    border-left : 0;
+    border-right:  0;
+    border-bottom: 0;
+    width: 300px;
+    height: 400px;
+    display:block;
+    padding-left: 580px;
 
 }
 
-fieldset {border-left : 0;
-    border-right:  0;
-    border-bottom: 0;
-    width:300px;
-    height: 500px;
+.button {display:block;
 
 }
