--- a/html_css/5_cadastree-se/css/cadastre-se_2.css
+++ b/html_css/5_cadastree-se/css/cadastre-se_2.css
@@ -2,7 +2,7 @@
 body {
     width: 1350px;
     height: 1000px;
-    background-image: url(../img/fon.png);
+    background-image: url(./img/fon.png);(./img/fon.png);
     background-size: 100%;
 }
 
@@ -95,6 +95,7 @@ body {
     width: 1214px;
     height: 992px;
     position: relative;
+ 
 }
 
 
@@ -121,7 +122,7 @@ body {
 .line_2 {
     margin: 0 0 0 0;
     width: 600px;
-    height: 112px;
+    height: 70px;
     border-bottom: 1px solid transparent;
     position: absolute;
     top: 237px;
@@ -131,9 +132,9 @@ body {
 }
 .line_3{
     width: 600px;
-    height: 544px;
+    height: 500px;
     position: absolute;
-    top: 351px;
+    top: 315px;
     left: 335px;
     background: rgba( 0, 0, 0, 0.4);
 }
@@ -172,6 +173,7 @@ body {
     display: inline-block;
     padding-left: 100px;
     padding-bottom: 50px;
+   
 }
 
 .ou > p:before,
@@ -262,13 +264,6 @@ body {
     text-align: center;
 }
 
-.legend {
-    margin-bottom: 10px;
-    text-align: center;
-    padding: 10px;
-    padding-top: 50px;
-    padding-left: 420px;
-}
 
 .input {
 margin-left: auto;
@@ -282,7 +277,6 @@ margin-left: auto;
     height: 400px;
     display:block;
     padding-left: 580px;
-
 }
 
 .button {display:block;
